# shiprocket_submission

./: README.md  netlify.toml
.netlify/: state.json
backend/: auth.py  db.py  encryption.py  main.py  pyproject.toml  requirements.txt  schemas.py  supabase_client.py
backend/agent/: __init__.py  analyzer.py  conditions.py  engine.py  llm_recommender.py
backend/connectors/: __init__.py  base.py  meta_ads.py  razorpay.py  shiprocket.py  shopify.py
backend/mcp/: __init__.py  server.py
backend/migrations/: 001_auth_thresholds_notifications.sql
backend/sync/: __init__.py  sync_job.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  AuthContext.jsx  Dashboard.jsx  LoginPage.jsx  RegisterPage.jsx  Root.jsx  index.css  tamboComponents.js  tamboTools.js  time.js
frontend/src/components/: AdsDashboard.jsx  CitationsPanel.jsx  CrossChannelChart.jsx  DeliveryTracker.jsx  HealthScore.jsx  InsightsList.jsx  OnboardingModal.jsx  OrdersChart.jsx  PaymentLedger.jsx  ProfitabilityCard.jsx  RevenueCard.jsx
