[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "fastmcp[http]>=3.2.4",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
    "httpx>=0.28.1",
    "openai>=2.36.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.2.2",
    "razorpay>=2.0.1",
    "uvicorn[standard]>=0.46.0",
]
